<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:icon="@mipmap/ic_action_copy"
        android:title="@string/action_copy"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_action_delete"
        android:title="@string/action_delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_clear"
        android:icon="@mipmap/ic_action_clear"
        android:title="@string/action_clear"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_exit"
        android:icon="@mipmap/ic_action_shutdown"
        android:title="@string/action_exit"
        app:showAsAction="always"/>

</menu>